# aetheros

./: .gitignore  PORTFOLIO_REVIEW.md  README.md  portfolio_data.md  test-deploy.txt
.claude/agents/: fable-architect.md  fable-debugger.md  fable-evaluator.md  fable-hardener.md  fable-implementer.md  fable-verifier.md
.claude/skills/fable-debug/: SKILL.md
.claude/skills/fable-decompose/: SKILL.md
.claude/skills/fable-evaluate/: SKILL.md
.claude/skills/fable-frame/: SKILL.md
.claude/skills/fable-harden/: SKILL.md
.claude/skills/fable-implement/: SKILL.md
.claude/skills/fable-verify/: SKILL.md
.claude/skills/fable-workflow/: SKILL.md
AetherOS/: Cargo.toml  PROJECT_REVIEW.md
AetherOS/aether-agents/src/: bus.rs  curator.rs
AetherOS/aether-cluster/: Cargo.toml
AetherOS/aether-core/src/: ipc.rs  memory.rs  memory_pressure.rs
AetherOS/aether-hal/: Cargo.toml
AetherOS/aether-hal/src/: npu.rs
AetherOS/aether-usdf/src/: lib.rs  retention.rs
DocAI/: PROJECT_REVIEW.md
SovereignGrid/: .env.example  README.md
SovereignGrid/daemon/: provider_daemon.py  requirements.txt
SovereignGrid/orchestrator/: auth.py  config.py  db.py  dispatch.py  ledger.py  main.py  models.py  registry.py  requirements.txt  sanitize.py  scheduler.py
SovereignGrid/supabase/: schema.sql
aether-agents/: Cargo.toml
aether-agents/src/: janitor.rs  lib.rs  library_updater.rs  memory_optimizer.rs  orchestrator.rs  synthesis.rs
aether-cluster/src/: gossip.rs  lib.rs  rdma.rs
aether-core/: Cargo.toml
aether-core/src/: agent.rs  lib.rs  scheduler.rs
aether-hal/src/: discovery.rs  lib.rs  memory_pool.rs  synthesis.rs
aether-usdf/: Cargo.toml
aether-usdf/src/: vector.rs  vfs.rs
cad-converter/: PROJECT_REVIEW.md
loopdecipher/: .env.example  .gitignore  README.md  launch.sh  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
loopdecipher/src/app/: globals.css  layout.tsx  page.tsx
loopdecipher/src/components/: AnswerPanel.tsx  AudioSandbox.tsx  CultureDecoder.tsx  InputForm.tsx  InterviewLoop.tsx  LoopTimeline.tsx  MermaidDiagram.tsx  PitchGenerator.tsx  QuestionBank.tsx  ResumeOptimizer.tsx  StudySchedule.tsx
loopdecipher/src/lib/: fetchJobPosting.ts  mockEngine.ts  mode.ts  parseResumeFile.ts  scraper.ts  types.ts
supply-chain-intel/: .env.example  .gitignore  render.yaml  requirements.txt  start.sh
supply-chain-intel/backend/: config.py  database.py  main.py  models.py  scheduler.py
supply-chain-intel/backend/api/: routes_ingestion.py  routes_metrics.py
supply-chain-intel/backend/connectors/: __init__.py  base.py  mock.py  sap.py
supply-chain-intel/backend/ingestion/: pipeline.py
supply-chain-intel/backend/metrics/: daily.py  weekly.py
supply-chain-intel/backend/ml/: anomaly.py  forecast.py
supply-chain-intel/frontend/: package-lock.json  package.json  vite.config.ts
supply-chain-intel/frontend/src/: App.tsx
tasks/: lessons.md  orin-nano-setup.md  todo.md
(+12 files in other folders)
