[package]
name    = "aether-agents"
version.workspace = true
edition.workspace = true

[dependencies]
aether-core    = { workspace = true }
aether-hal     = { workspace = true }
aether-usdf    = { workspace = true }
aether-cluster = { workspace = true }
crossbeam      = { workspace = true }
hashbrown      = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }

[features]
# Enable live crates.io network checks in LibraryUpdaterAgent.
network = ["dep:ureq"]

[dependencies.ureq]
version  = "2"
optional = true
