[package]
name    = "aether-cluster"
version.workspace = true
edition.workspace = true

[dependencies]
aether-core = { workspace = true }
hashbrown   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
rand        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
bytes       = { workspace = true }
